--- a/app/src/main/res/layout/activity_event_details_participant.xml
+++ b/app/src/main/res/layout/activity_event_details_participant.xml
@@ -16,16 +16,28 @@
                                            app:cardBackgroundColor="@color/utility"
                                            app:cardCornerRadius="5dp"
                                            app:cardElevation="5dp"
-                                           android:layout_height="250dp">
+                                           android:layout_height="wrap_content">
             <LinearLayout android:layout_width="match_parent"
                           android:orientation="vertical"
                           android:layout_height="match_parent">
                 <ImageView android:layout_width="300dp"
                            android:layout_height="200dp"
                            android:src="@drawable/bnr"
+                           android:id="@+id/banner"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="15dp"
                 />
+                <Button android:layout_width="wrap_content"
+                        android:layout_gravity="center"
+                        android:padding="15dp"
+                        android:gravity="center"
+                        android:textSize="20sp"
+                        android:layout_margin = "10dp"
+                        android:text="See Event Schedule"
+                        android:id="@+id/btn_schedule"
+                        android:textAllCaps="false"
+                        android:background="@drawable/utility_button"
+                        android:layout_height="wrap_content"/>
 
             </LinearLayout>
 
